# wool

./: .gitignore  Cargo.toml  Changelog.md  readme.md
examples/: mermaid-test.md  readme.html  readme.md
src/: cli.rs  d2.rs  lib.rs  main.rs  mermaid.rs  openurl.rs  template.rs
templates/: boilerplate.html  footer.html  github-markdown-dark.css  github-markdown.css
