[package]
name = "wool"
version = "1.0.0"
authors = ["Your Name Here <your_email@youremail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.6.2"
clap = "2.33.0"
url = "2.1.1"
log            = "0.4"
notify         = "5.0.0-pre.2"
tokio = { version = "1.40", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
hyper-staticfile = "0.9.6"

[dependencies.http]
version = "0.2.0"
